<resources>
    <string name="app_name">Толь бичиг</string>
    <string name="action_settings">Тохиргоо</string>
    <string name="title_activity_splash_screen">Толь бичиг</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main"></string>
    <string name="title_activity_lock_screen"></string>
    <string name="title_activity_settings">Тохиргоо</string>
    <string name="initial_message">Thank you for downloading the Floating Lock Button! To get started please enable the device administrator rights to be able to lock the screen. Once it has been activated the floating lock button can be displayed.</string>
    <string name="admin_enabled">Great! Now turn on the switch to display the floating lock button.</string>
    <string name="button_displayed">Awesome! You can now lock your screen by tapping the little Android button floating on the screen! If you need to move button out of the way, or just don\'t like where it is positioned on the screen, just press and hold to drag it around.</string>
    <string name="error_message">Hmm... It appears something went wrong enabling the device administrator. Try switching it on again later.</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_word_add">Үг нэмэх</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_web">tortuvshin.github.io</string>
    <string name="title_activity_contact">Холбоо барих</string>
    <string name="title_activity_word_detail"></string>
    <string name="title_activity_word_edit">Үг засах</string>
    <string name="title_activity_remember_word">Цээжлэх үг</string>


    <string name="mongolian_word">Монгол үг</string>
    <string name="negative_word">Negative</string>
    <string name="english_word">Англи үг</string>
    <string name="edit_word">Засах</string>
    <string name="save_word">Хадгалах</string>
    <string name="admin_enable">Админ эрх идэвхжүүллээ</string>
    <string name="admin_disable">Админ эрх идэвхгүй болголоо</string>
    <string name="msg_true">Тийм</string>
    <string name="msg_false">Үгүй</string>



    <string name="private_notification">Push Private Notification</string>
    <string name="public_notification">Push Public Notification</string>
    <string name="secret_notification">Push Secret Notification</string>
    <string name="heads_up_notification">Show Heads Up Notification</string>
    <string name="view_details">View details...</string>
    <string name="private_title">Keep this quiet</string>
    <string name="private_text">This is a private message</string>
    <string name="public_title">Here ye - public message</string>
    <string name="public_text">Таны өнөөдөр цээжлэх шинэ үг</string>
    <string name="secret_title">Shhh... - it\'s secret</string>
    <string name="secret_text">This is a secret message</string>
    <string name="heads_up_title">Cubs are playing now!</string>
    <string name="heads_up_text">The Chicago Cubs are playing on WGN!</string>

    <string name="search_hint">Search&#8230;</string>
    <string name="hint_prompt">Speak an item name or a number</string>

    <string name="cd_up_button">Up navigation button</string>
    <string name="cd_voice_search">Voice search</string>
    <string name="cd_clear_button">Clear field</string>
    <string name="cd_suggestion_icon">List item icon</string>

</resources>
