<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:title="Search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item
        android:id="@+id/private_notification"
        android:orderInCategory="200"
        android:title="@string/private_notification"
        app:showAsAction="never" />
    <item
        android:id="@+id/public_notification"
        android:orderInCategory="300"
        android:title="@string/public_notification"
        app:showAsAction="never" />
    <item
        android:id="@+id/secret_notification"
        android:orderInCategory="400"
        android:title="@string/secret_notification"
        app:showAsAction="never" />
    <item
        android:id="@+id/heads_up_notification"
        android:orderInCategory="500"
        android:title="@string/heads_up_notification"
        app:showAsAction="never" />

</menu>
